--- a/app/assets/stylesheets/food.css
+++ b/app/assets/stylesheets/food.css
@@ -8,7 +8,7 @@
   display: flex;
   flex-direction: row;
   justify-content: flex-end;
-  margin-bottom: 16px;
+  margin: 0 68px 16px 0;
 }
 
 .add_link {
@@ -20,6 +20,8 @@
 table {
   border-collapse: collapse;
   vertical-align: middle;
+  align-self: center;
+  width: 64vw;
 }
 
 th,
