--- a/app/assets/stylesheets/recipedetails.css
+++ b/app/assets/stylesheets/recipedetails.css
@@ -30,6 +30,10 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  margin: 0 64px;
+  margin: 0 64px 24px 64px;
+}
 
+.recipefood_data {
+  display: flex;
+  flex-direction: row;
 }
