--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -18,6 +18,26 @@
       <button>Generate shopping list</button>
       <%= button_to "Add ingredient", new_recipe_recipefood_path(@recipe), method: :get %>
     </div>
-   
+    <table>
+      <tr>
+          <th>Ingredient</th>
+          <th>Quantity</th>
+          <th>Value</th>
+          <th>Actions</th>
+      </tr>
+      <% @recipefoods.each do |recipefood| %>
+        <tbody>
+          <tr id= <%= recipefood.id %> >
+            <td><%=recipefood.food.name %></td>
+            <td><%=recipefood.quantity %></td>
+            <td><%="$#{recipefood.quantity*recipefood.food.price}" %></td>
+            <td class="recipefood_data">
+              <%= button_to "Remove", recipe_recipefood_path(recipefood), method: :delete %>
+              <%= button_to "Modify", edit_recipe_recipefood_path(recipefood), method: :get %>
+            </td>
+          </tr>
+        </tbody>
+    <% end %>
+    </table>
   </div>
 </body>
