--- a/app/assets/stylesheets/recipe.css
+++ b/app/assets/stylesheets/recipe.css
@@ -1,3 +1,10 @@
+.add_recipe {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  margin: 8px 160px;
+}
+
 .recipe_main {
   display: flex;
   flex-direction: row;
@@ -21,4 +28,28 @@
   text-decoration: none;
   font-weight: bold;
   color: darkblue;
+}
+
+.add_recipe_main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.add_recipe_input {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin: 12px 0;
+}
+
+.add_recipe_submit {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  margin: 24px 0;
+}
+
+.add_recipe_field {
+  min-width: 200px;
 }
