--- a/app/views/shoppinglist/index.html.erb
+++ b/app/views/shoppinglist/index.html.erb
@@ -2,27 +2,27 @@
 <div class="shop_main">
   <h2>Shopping List</h2>
   <div class="shop_totals">
-    <strong class="shop_item">Amount of food items to buy: x</strong>
-    <strong class="shop_value">Total value of food needed: y</strong>
+    <strong class="shop_item">Amount of food items to buy: <%= @total_quantity.abs %></strong>
+    <strong class="shop_value">Total value of food needed: <%= @total_value.abs %></strong>
   </div>
-
   <table>
     <tr>
         <th>Food</th>
-        <th>Measurement Unit</th>
-        <th>Unit Price</th>
         <th>Quantity</th>
+        <th>Unit Price</th>
+        <th>Total Price</th>
     </tr>
-    <% @foods.each do |food| %>
+    <% @shoppinglist.each_with_index do |shop, i| %>
       <tbody>
-        <tr id= <%= food.id %> >
-          <td><%=food.name %></td>
-          <td><%=food.measurement_unit %></td>
-          <td><%="$#{food.price}" %></td>
-          <td><%=food.quantity %></td>
-        </tr>
+        <% if shop[1] < 0 %>
+          <tr>
+            <td><%=shop[0] %></td>
+            <td><%=shop[1].abs %></td>
+            <td><%=@prices[shop[0]] %></td>
+            <td><%=@prices[shop[0]]*shop[1].abs %></td>
+          </tr>
+      <% end %>
       </tbody>
     <% end %>
   </table>
-
 </div>
