Nav Menu & N+1 fixes

--- a/app/views/recipes/_navmenu.html.erb
+++ b/app/views/recipes/_navmenu.html.erb
@@ -9,6 +9,9 @@
     <%= link_to foods_path, class:"nav_items" do %>
       <p> My food list </p>
     <% end %>
+    <%= link_to shoppinglist_index_path, class:"nav_items" do %>
+      <p> General Shopping List </p>
+    <% end %>
   </div>
   <div class="nav_user">
     <p class="user_logged"><%= current_user.name %></p>
